--- a/.gitconfig
+++ b/.gitconfig
@@ -14,5 +14,7 @@
     excludesfile = ~/.gitignore
 [status]
     submoduleSummary = true
+[pager]
+    log = less -S
 [alias]
     graph = log --graph --abbrev-commit --decorate --format=format:'%C(bold blue)%h%C(reset) - %C(bold cyan)%aD%C(reset) %C(bold green)(%ar)%C(reset)%C(bold yellow)%d%C(reset)%n''          %C(white)%s%C(reset) %C(dim white)- %an%C(reset)' --all
