dotconfig: This kills the carriage return

--- a/.gitconfig
+++ b/.gitconfig
@@ -12,6 +12,7 @@
     default = simple
 [core]
     excludesfile = ~/.gitignore
+    autocrlf = input
 [status]
     submoduleSummary = true
 [pager]
