bashrc: Added an autosource function that allows us to source other files similar to how you would import python modules

--- a/.environment.d/dotfiles.env
+++ b/.environment.d/dotfiles.env
@@ -1,4 +1,4 @@
 DOTFILES_ACTIVE=true
 DOTFILES_DIR="${HOME}/.dotfiles"
 DOTFILES_GITDIR="${HOME}/.dotgit"
-
+BASH_FUNC_PATH="${HOME}/.bash_functions:${DOTFILES_DIR}/bash_functions"
