--- a/.environment.d/aws.env
+++ b/.environment.d/aws.env
@@ -1,5 +1,5 @@
 AWS_DEFAULT_REGION=eu-central-1
-AWS_DEFAULT_OUTPUT=json
+AWS_DEFAULT_OUTPUT=yaml
 
 AZURE_APP_ID_URI=https://signin.aws.amazon.com/saml
 AZURE_DEFAULT_DURATION_HOURS=12
