--- a/.config/i3/config
+++ b/.config/i3/config
@@ -179,6 +179,8 @@ mode "resize" {
 
 bindsym $mod+r mode "resize"
 
+for_window [class="steam_app_40800" instance="steam_app_40800"] floating enable
+
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 bar {
