style(environment.d): remove unnecessary export

--- a/.environment.d/neovim.env
+++ b/.environment.d/neovim.env
@@ -1,6 +1,6 @@
 # Set neovim as default editor if it is installed
 
 if command -v nvim >/dev/null 2>&1; then
-  export EDITOR=nvim
+  EDITOR=nvim
 fi
 
